# solix-cli

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  solix-cli.1
src/solix_cli/: __main__.py  cli.py
src/solix_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
